# clickup2notion

./: .gitignore  README.md  pyproject.toml
src/clickup2notion/: README.md  export.py  main.py  requirements.txt
src/clickup2notion/adapters/: __init__.py  attachments_adapter.py  base_adapter.py  clickup_url_adapter.py  comments_adapter.py  composite_adapter.py  creator_adapter.py  dates_adapter.py  description_adapter.py  due_date_adapter.py  priority_adapter.py  space_info_adapter.py  status_adapter.py  subtasks_adapter.py  tags_adapter.py  task_name_adapter.py
src/clickup2notion/services/: clickup_service.py  migration_service.py  notion_service.py
src/clickup2notion/utils/: helpers.py
